--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,15 +23,23 @@ android {
 }
 
 ext {
-    supportLibrary_version = "28.0.0"
+    support_library_version = "28.0.0"
+    anko_version = '0.10.5'
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    // support
+    implementation "com.android.support:appcompat-v7:$support_library_version"
+    implementation "com.android.support:design:$support_library_version"
     implementation "com.android.support.constraint:constraint-layout:1.1.3"
 
-    implementation "com.android.support:appcompat-v7:$supportLibrary_version"
+    // anko
+    implementation "org.jetbrains.anko:anko:$anko_version"
+    implementation "org.jetbrains.anko:anko-design:$anko_version"
+    implementation "org.jetbrains.anko:anko-coroutines:$anko_version"
 
     testImplementation "junit:junit:4.12"
     androidTestImplementation "com.android.support.test:runner:1.0.2"
