--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    // The Sports DB API Configuration
+    buildTypes.all {
+        buildConfigField "String", "BASE_URL", "\"https://www.thesportsdb.com/api/v1/json/\""
+        buildConfigField "String", "TSDB_API_KEY", "\"1\""
+    }
 }
 
 ext {
@@ -40,6 +46,9 @@ dependencies {
     implementation "org.jetbrains.anko:anko:$anko_version"
     implementation "org.jetbrains.anko:anko-design:$anko_version"
     implementation "org.jetbrains.anko:anko-coroutines:$anko_version"
+
+    // gson
+    implementation 'com.google.code.gson:gson:2.8.5'
 
     implementation 'com.android.support:support-v4:28.0.0'
     testImplementation "junit:junit:4.12"
