import detail match from last project (without favorites)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,5 +27,9 @@
         <activity
             android:name=".view.matchesSearch.MatchesSearchActivity"
             android:launchMode="singleTop" />
+
+        <activity
+            android:name=".view.matchesDetail.MatchesDetailActivity"
+            android:launchMode="singleTop" />
     </application>
 </manifest>
