--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,9 +42,11 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     // support
-    implementation "com.android.support:appcompat-v7:$support_library_version"
-    implementation "com.android.support:design:$support_library_version"
     implementation "com.android.support.constraint:constraint-layout:1.1.3"
+    implementation "com.android.support:appcompat-v7:$support_library_version"
+    implementation "com.android.support:support-v4:$support_library_version"
+    implementation "com.android.support:design:$support_library_version"
+    implementation "com.android.support:exifinterface:$support_library_version"
 
     // anko
     implementation "org.jetbrains.anko:anko:$anko_version"
@@ -54,7 +56,9 @@ dependencies {
     // gson
     implementation 'com.google.code.gson:gson:2.8.5'
 
-    implementation 'com.android.support:support-v4:28.0.0'
+    // load picture
+    implementation "com.squareup.picasso:picasso:2.71828"
+
     testImplementation "junit:junit:4.12"
     androidTestImplementation "com.android.support.test:runner:1.0.2"
     androidTestImplementation "com.android.support.test.espresso:espresso-core:3.0.2"
