setup template for team detail view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,5 +31,9 @@
         <activity
             android:name=".view.matchesDetail.MatchesDetailActivity"
             android:launchMode="singleTop" />
+
+        <activity
+            android:name=".view.teamsDetail.TeamsDetailActivity"
+            android:launchMode="singleTop" />
     </application>
 </manifest>
